add store card view on search client

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
   >
     <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer p-10 m-b-20" fxFlex="100" fxLayoutGap="1%">
       <!-- Ô tìm kiếm KH -->
-      <mat-card class="m-b-10" fxFlex="59" fxFlex.lt-md="95" tourAnchor="id6">
+      <mat-card class="m-b-10" fxFlex="100"  tourAnchor="id6">
         <mat-card-header>
           <mat-card-title class="title">
             <h3>Tim kiếm thông tin khách hàng:</h3>
@@ -85,12 +85,10 @@
           <midas-mainboard></midas-mainboard>
         </mat-card-content>
       </mat-card>
-      <div fxLayout="column" fxFlex="39" fxFlex.lt-md="95" tourAnchor="id7">
-        <!-- Ô calendar -->
+      <!-- <div fxLayout="column" fxFlex.lt-md="95" tourAnchor="id7">
         <mat-card class="" fxFlex="100">
           <mat-card-header>
             <mat-card-title class="title">
-              <!-- {{'Home_Component.Card'| translate}} <strong>{{username}}</strong>! -->
               Lịch làm việc:
             </mat-card-title>
           </mat-card-header>
@@ -99,7 +97,7 @@
             <midas-calendar></midas-calendar>
           </mat-card-content>
         </mat-card>
-      </div>
+      </div> -->
     </div>
 
     <!-- Tạm thời ẩn mục này
